# eth-talk

./: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
ai/: prompts.ts  testnet.ts
app/(auth)/: auth.config.ts
app/(chat)/: layout.tsx  nillion.ts  providers.tsx
app/(chat)/api/: index.py
app/(chat)/api/chat/: chatbot.py  route.ts  tools.py
app/(chat)/api/chat2/: system_prompt.txt  wallet_data.txt
app/(chat)/api/chatv2/: cdp_service.py
app/(chat)/api/webhook/: route.ts
app/(chat)/context/: ConfigContext.tsx
app/api/health/: route.ts
app/api/webhook/: route.ts
app/collect/: route.tsx
components/custom/: CoinbaseWalletLogo.tsx  WalletButton.tsx  app-sidebar.tsx  chat-header.tsx  message.tsx  multimodal-input.tsx  overview.tsx  testnet-selector.tsx
hooks/: useFetchTransactions.ts
lib/: spender.ts
lib/abi/: SpendPermissionManager.ts
src/eth_talk/: __init__.py
